clean up and syntax update

--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,7 @@
         <script type="text/javascript" src='../src/background-video-size.js'></script>
         <script type="text/javascript">
             $(document).ready(function(){
-                $('iframe').backgroundVideo();
+                $('body').backgroundVideo($('iframe'));
             });
         </script>
     </body>
